trunk instruction for build and deploy

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head> </head>
+    <head> 
+        <meta charset="utf-8" />
+        <title>Gra "Bóg jest dobry"</title>
+    </head>
     <body></body>
 </html>
